force-app/main/default/objects/Food__c/Food__c.object-meta.xml
<CustomObject>
    <description>Utilized to catalog detailed information about each food, including ingredients, preparation instructions, images, and more, facilitating easy access and management for recipe owners and customers.</description>
    <label>Food</label>
    <nameField>
        <label>Food Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Foods</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>