force-app/main/default/objects/Food__c/fields/Preparation_Time__c.field-meta.xml
<CustomField>
    <fullName>Preparation_Time__c</fullName>
    <label>Preparation Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>