force-app/main/default/objects/Food__c/fields/Serving_Size__c.field-meta.xml
<CustomField>
    <fullName>Serving_Size__c</fullName>
    <label>Serving Size</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Small size</fullName>
            </value>
            <value>
                <fullName>Medium size</fullName>
            </value>
            <value>
                <fullName>Large  size</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>